# ray-tracing-cc

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md
src/: BUILD.bazel  aabb.hh  bvh.hh  camera.hh  color.hh  common.hh  hittable.hh  hittable_list.hh  interval.hh  main.cc  material.hh  ray.hh  sphere.hh  texture.hh  vec3.hh
tools/: BUILD.bazel  linters.bzl
