load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "library",
    hdrs = [
        "color.hh",
        "common.hh",
        "hittable.hh",
        "hittable_list.hh",
        "ray.hh",
        "sphere.hh",
        "vec3.hh",
    ],
)

cc_binary(
    name = "ray_tracer",
    srcs = ["main.cc"],
    visibility = ["//visibility:public"],
    deps = [":library"],
)
